Fix rewardmeter positioning on mobile

--- a/demos/PersonalizerTravelAgencyDemo/PersonalizerTravelAgencyDemo/wwwroot/css/site.css
+++ b/demos/PersonalizerTravelAgencyDemo/PersonalizerTravelAgencyDemo/wwwroot/css/site.css
@@ -199,7 +199,7 @@ h1 {
     display: block;
     position: fixed;
     top: 6rem;
-    right: -5.5rem;
+    right: -4.5rem;
     z-index: 99;
     width: 10rem;
     height: 10rem;
